# battle_ship

./: .gitignore  CMakeLists.txt  README.md  main.c
src/board/: board.c  board.h
src/client/: client.c  client.h
src/point/: point.c  point.h
src/server/: session.c  session.h
src/ship/: ship.h
src/utils/: console_colors.h
